--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h2>Hello world !</h2>
-        </div>
-    </div>
-</div>
+<app-header></app-header>
+
+<app-recipes></app-recipes>
+
+<app-shopping-list></app-shopping-list>
