--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,44 @@
-<p>
-  recipe-detail works!
-</p>
+<div class="pl-5">
+    <div class="row">
+        <div class="col-xs-12">
+          <img src="https://www.bbcgoodfood.com/sites/default/files/recipe/recipe-image/2016/09/frying-pan-pizza.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+      </div>
+      
+      <hr>
+      
+      <div class="row">
+        <div class="col-xs-12">
+      
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Manage Recipe
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">To Shoping List</a>
+              <a class="dropdown-item" href="#">Edit Recipe</a>
+              <a class="dropdown-item" href="#">Delete Recipe</a>
+            </div>
+          </div>
+      
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <h5 class="mt-3">Description</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Praesentium, maiores libero saepe aperiam voluptatem reprehenderit, 
+            pudiandae cimus reiciendis ipsam a quod 
+            obcaecati labore temporibus. Distinctio, tenetur!</p>
+
+          <h5 class="mt-3">Ingrediants</h5>
+          <ul>
+            <li>GO to hell</li>
+            <li>GO to hell</li>
+            <li>GO to hell</li>
+            <li>GO to hell</li>
+          </ul>
+        </div>
+      </div>
+</div>
