--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,3 +1,32 @@
-<p>
-  recipe-list works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success d-inline-block mb-2">New Item</button>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-action" *ngFor="let recipe of recipes">
+          
+        <div class="d-flex">
+            <div>
+              <h4>{{ recipe.name }}</h4>
+              <p>{{ recipe.description }}</p>
+            </div>
+            
+            <img 
+              [src]="recipe.imagePath"
+              alt="Recipe" height="80" 
+              class="align-self-center rounded-circle" />
+            <!-- <img src="{{recipe.imagePath}}" /> -->
+            <!-- <img src={{recipe.imagePath}} /> -->
+        </div>
+            
+      </li>
+    </ul>
+  </div>
+</div>
+<app-recipe-item></app-recipe-item>
