--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,3 +1,22 @@
-<p>
-  shopping-edit works!
-</p>
+<div class="container">
+  <form>
+      <div class="form-row">
+  
+          <div class="form-group col-md-9">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Item Name...">
+          </div>
+    
+          <div class="form-group col-md-3">
+            <label for="amount">Amount</label>
+            <input type="number" class="form-control" id="amount" placeholder="1">
+          </div>
+    
+        </div>
+      <div class="d-flex">
+        <button type="submit" class="btn btn-success mr-auto d-block">ADD</button>
+        <button type="button" class="btn btn-outline-danger ml-auto mr-3 d-block">DELETE</button>
+        <button type="button" class="btn btn-outline-secondary d-block">CLEAR</button>
+      </div>   
+  </form>
+</div>
