--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
 	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="#">Recipes <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Shoping List</a>
+				<a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Pricing</a>
@@ -19,7 +19,7 @@
 		</ul>
 
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item dropdown">
+			<li class="nav-item dropdown " appDropdown>
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Manage
 				</a>
