--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,16 @@
-<p>
-  recipe-item works!
-</p>
+<li class="list-group-item list-group-item-action"
+    (click)="onSelected()" >
+  <div class="d-flex">
+      <div>
+        <h4>{{ recipe.name }}</h4>
+        <p>{{ recipe.description }}</p>
+      </div>
+      
+      <img 
+        [src]="recipe.imagePath"
+        alt="Recipe" height="80" 
+        class="align-self-center rounded-circle" />
+      <!-- <img src="{{recipe.imagePath}}" /> -->
+      <!-- <img src={{recipe.imagePath}} /> -->
+  </div>       
+</li>
