--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,10 +1,20 @@
 <div class="container">
   <div class="row">
     <div class="col-md-5">
-      <app-recipe-list></app-recipe-list>
+      <app-recipe-list 
+       (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
+
     </div>
     <div class="col-md-7">
-      <app-recipe-detail></app-recipe-detail>
+
+      <app-recipe-detail 
+        *ngIf="selectedRecipe; else infoText"
+        [recipe]="selectedRecipe"></app-recipe-detail>
+
+      <ng-template #infoText>
+        <p>Please, selecet a Recipe !</p>
+      </ng-template>
+
     </div>
   </div>
 </div>
