Using the power of angular Services & Directives to enhance the project

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -12,10 +12,8 @@
       
       <app-recipe-item
         *ngFor="let recipeEl of recipes"
-        [recipe]="recipeEl"
-        (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
+        [recipe]="recipeEl"></app-recipe-item>
 
     </ul>
   </div>
 </div>
-<app-recipe-item></app-recipe-item>
