--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,7 @@
 <div class="pl-5">
     <div class="row">
         <div class="col-xs-12">
-          <img [src]="44" class="img-fluid" alt="{{ recipe.name }}">
+          <img [src]="recipe.imagePath" class="img-fluid" alt="{{ recipe.name }}">
         </div>
       </div>
       
@@ -10,14 +10,17 @@
       <div class="row">
         <div class="col-xs-12">
       
-          <div class="dropdown">
+          <div class="dropdown" appDropdown>
             <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Manage Recipe
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">To Shopping List</a>
-              <a class="dropdown-item" href="#">Edit Recipe</a>
-              <a class="dropdown-item" href="#">Delete Recipe</a>
+              <a 
+                class="dropdown-item"
+                (click)="addToShoppingList(recipe)">To Shopping List</a>
+                
+              <a class="dropdown-item">Edit Recipe</a>
+              <a class="dropdown-item">Delete Recipe</a>
             </div>
           </div>
       
@@ -30,11 +33,12 @@
           <p>{{ recipe.description }}</p>
 
           <h5 class="mt-3">Ingrediants</h5>
-          <ul>
-            <li>GO to hell</li>
-            <li>GO to hell</li>
-            <li>GO to hell</li>
-            <li>GO to hell</li>
+          <ul class="list-group">
+              <li 
+                class="list-group-item"
+                *ngFor="let ing of recipe.ingredients">
+                  {{ ing.name }} ( {{ ing.amount }} )
+              </li>
           </ul>
         </div>
       </div>
