--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
-	<a class="navbar-brand" href="#">Recipe Book</a>
+	<a class="navbar-brand" routerLink="/">Recipe Book</a>
 
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -7,14 +7,21 @@
 
 	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		<ul class="navbar-nav">
-			<li class="nav-item active">
-				<a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes <span class="sr-only">(current)</span></a>
+			<li 
+				class="nav-item active" 
+				routerLinkActive="active"
+				[routerLinkActiveOptions]="{exact: true}" >
+				<a class="nav-link" routerLink="/">Recipes <span class="sr-only">(current)</span></a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+			<li 
+				class="nav-item" 
+				routerLinkActive="active">
+				<a class="nav-link" routerLink="/shopping-list">Shopping List</a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Pricing</a>
+			<li 
+				class="nav-item" 
+				routerLinkActive="active">
+				<a class="nav-link" routerLink="/pricing">Pricing</a>
 			</li>
 		</ul>
 
